@@ -1,3 +1,9 @@
+2012-12-14  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* account: Default URL to redirect to after login can now be
+	overriden via the adapter, both for login and e-mail confirmation
+	redirects.
+
 2012-12-06  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* Version 0.8.3 released.
